Add psycopg2 and dj-database-url packages
- psycopg2 for handling Postgresql engine
- dj-database-url to be able to specify connection settings via URLs

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,8 @@ python-slugify
 django-pgcli
 bpython
 gunicorn
+# to handle Postgresql databases
+psycopg2
+
+# use database urls to populate Django DATABASES dictionary
+dj-database-url
