--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,27 @@
-django
-django-extensions
-werkzeug
-django-jsonfield
-django-debug-toolbar
-python-slugify
-django-pgcli
-bpython
-gunicorn
-# to handle Postgresql databases
-psycopg2
-
-# use database urls to populate Django DATABASES dictionary
-dj-database-url
-
-# Use Twitter Bootstrap
-django-bootstrap3
+blessings==1.6
+bpython==0.15
+click==6.3
+configobj==5.0.6
+curtsies==0.2.6
+dj-database-url==0.4.0
+Django==1.9.4
+django-bootstrap3==7.0.0
+django-debug-toolbar==1.4
+django-extensions==1.6.1
+django-jsonfield==0.9.19
+django-pgcli==0.0.2
+greenlet==0.4.9
+gunicorn==19.4.5
+pgcli==0.20.1
+pgspecial==1.2.0
+prompt-toolkit==0.46
+psycopg2==2.6.1
+Pygments==2.1.3
+python-slugify==1.2.0
+requests==2.9.1
+setproctitle==1.1.9
+six==1.10.0
+sqlparse==0.1.19
+Unidecode==0.4.19
+wcwidth==0.1.6
+Werkzeug==0.11.4
